# deputui

./: ASYNC_DESIGN.md  Cargo.toml  LICENSE  README.md  flake.nix  makefile  prompt.md  requirements.yaml  run.sh  todo.md
.github/: dependabot.yml
.github/workflows/: ci.yml
crates/all-in-one/: Cargo.toml
crates/all-in-one/src/: args.rs  main.rs
crates/common/: Cargo.toml
crates/common/src/: async_h1_client.rs  lib.rs  npm_registry.rs  release.rs
crates/outdat-list/: Cargo.toml
crates/outdat-list/src/: main.rs  pnpm.rs
crates/outdatui/: Cargo.toml
crates/outdatui/src/: app.rs  async_task.rs  github.rs  main.rs  multi_select.rs  release_ext.rs  release_notes.rs
crates/pnpm/: Cargo.toml
crates/pnpm/src/: args.rs  lib.rs  main.rs
crates/review/: Cargo.toml
crates/review/src/: app.rs  app_shell.rs  args.rs  async_task.rs  github.rs  lib.rs  main.rs  multi_select.rs  tui.rs
prompts/: draft-todos.md  finalize-todos.md  first.md  implement-single-todo.md  second.md
src/: app.rs  app_shell.rs  async_h1_client.rs  async_task.rs  jobs.rs  main.rs  multi_select.rs  npm_registry.rs  pnpm.rs  semver.rs  tests.rs  tui.rs  ui.rs
todos/: 2-refactor-with-workspaces.md  3-fetch-release-notes-from-github.md  4-fetch-release-notes-from-non-github.md  5-show-release-notes.md  6-async-task-runner.md  7-channels.md  8-all-in-one-binary.md  9-scrollable-list.md  fetch-list-of-releases-from-npmjs.md
