[package]
name = "outdatui"
version = "0.1.0"
edition = "2024"
description = "lorem ipsum"
license = "MIT"

[dependencies]
anyhow = "1.0.100"
async-h1 = "2.3.4"
async-native-tls = "0.5.0"
futures-core = "0.3.0"
futures-util = "0.3.0"
http-types = "2.12.0"
ratatui = { version = "0.30.0", features = ["crossterm"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
smol = "2.0.2"
tui-markdown = "0.3.7"
url = "2.5.8"

# Read the optimization guideline for more details: https://ratatui.rs/recipes/apps/release-your-app/#optimizations
[profile.release]
opt-level = "s"
strip = true
lto = true
codegen-units = 1
