[workspace]
resolver = "2"
members = [
    "crates/outdatui",
    "crates/outdat-list", 
    "crates/common"
]

# Read the optimization guideline for more details: https://ratatui.rs/recipes/apps/release-your-app/#optimizations
[profile.release]
opt-level = "s"
strip = true
lto = true
codegen-units = 1
