[workspace]
resolver = "2"
members = [
  "crates/common",
  "crates/all-in-one",
  "crates/pnpm",
  "crates/review",
]

# Read the optimization guideline for more details: https://ratatui.rs/recipes/apps/release-your-app/#optimizations
[profile.release]
opt-level = "s"
strip = true
lto = true
codegen-units = 1
