[package]
name = "deputui"
version = "0.1.0"
edition = "2021"
description = "TUI for fetching and reviewing NPM minor version updates"
license = "MIT"

[[bin]]
name = "deputui"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.101"
clap = { version = "4.5.56", features = ["derive"] }
deputui-pnpm = { path = "../pnpm" }
deputui-review = { path = "../review" }
smol = "2.0.0"
