[package]
name = "common"
version = "0.1.0"
edition = "2021"
description = "Common functionality for deputui binaries"
license = "MIT"

[dependencies]
anyhow = "1.0.100"
async-h1 = "2.3.4"
async-native-tls = "0.5.0"
http-types = "2.12.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
smol = "2.0.2"
url = "2.5.8"