[package]
name = "outdat-list"
version = "0.1.0"
edition = "2021"
description = "Lists minor version updates for NPM packages"
license = "MIT"

[[bin]]
name = "outdat-list"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
futures = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
smol = "2.0.2"

common = { path = "../common" }