[package]
name = "deputui-pnpm"
version = "0.1.0"
edition = "2021"
description = "Parses `pnpm outdated --format json` output and prints minor version updates to stdout"
license = "MIT"

[[bin]]
name = "deputui-pnpm"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.101"
futures = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.149"
smol = "2.0.2"
common = { path = "../common" }
clap = { version = "4.5.56", features = ["derive"] }
