[package]
name = "deputui-review"
version = "0.1.0"
edition = "2021"
description = "TUI for reviewing release notes"
license = "MIT"

[[bin]]
name = "deputui-review"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.100"
futures = "0.3.31"
http-types = "2.12.0"
ratatui = "0.30.0"
crossterm = { version = "0.29", features = ["event-stream"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.149"
smol = "2.0.2"
tui-markdown = "0.3.7"
url = "2.5.8"
common = { path = "../common" }
clap = { version = "4.5.56", features = ["derive"] }
